<resources>
    <string name="app_name">MyTestApp1</string>
    <string name="edit_text">Введите слово</string>
    <string name="hello_world">Hello, world</string>
    <string name="button1">Нажмите</string>
    <string name="checkbox">CheckBox</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="red">Red</string>
    <string name="orange">orange</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="purple">purple</string>
</resources>